[tool.poetry]
name = "bot38"
version = "0.1.0"
description = "bot38"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["haruka_bot", "nonebot_plugin_status", "nonebot_plugin_abbrreply", "nonebot_plugin_analysis_bilibili", "nonebot_plugin_withdraw", "nonebot_plugin_simplemusic", "nonebot_plugin_petpet", "nonebot_plugin_memes", "nonebot_plugin_wordcloud", "nonebot_plugin_bilicover", "nonebot_plugin_baidutranslate"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
